2006-01-24  Adam Piatyszek  <ediap@users.sourceforge.net>

	* tests/matfunc_test.cpp, tests/matfunc_test.ref: Fixed	the
	problem with two possible solutions of a complex matrix square
	root - `sqrtm()' function

	* itpp/base/stat.cpp, itpp/base/stat.h: `norm()' functions revised
	- from now the implementation is similar to the Octave one, i.e.
	both vector- and matrix-based functions accept "fro" argument to
	choose the Frobenius norm. `frob_norm()' functions removed.

2006-01-24  Erik G. Larsson  <erik_g_larsson@users.sourceforge.net>

	* itpp/itcomm.h: Included <itpp/comm/llr.h>

2006-01-24  Erik G. Larsson  <erik_g_larsson@users.sourceforge.net>

	* itpp/comm/llr.h, itpp/comm/llr.cpp: Added new LLR algebra class

	* tests/llr_test.cpp, tests/llr_test.ref: Added test program for
	LLR class

	* itpp/comm/sources.mk, tests/Makefile.am: Updated accordingly
	
2006-01-24  Adam Piatyszek  <ediap@users.sourceforge.net>

	* tests/schur_test.cpp, tests/schur_test.ref: Fixed the schur test
	program so now it should pass for different BLAS/LAPACK
	implementations

2006-01-23  Adam Piatyszek  <ediap@users.sourceforge.net>

	* itpp/base/converters.cpp: Fixed bug [1412383]. The dec2bin()
	functions appended en extra zero in front of the bit vector. This
	wrong behaviour has been fixed. (merged from itpp-3-9-branch)

	* tests/matfunc_test.cpp: Added a check for LAPACK or MKL libraries,
	which are needed by the sqrtm() funciton

	* itpp/base/mat.cpp, itpp/base/mat.h, itpp/base/vec.cpp,
	itpp/base/vec.h: Fixed a problem with non existing specialisation
	of the `operator*' and `dot' function when linking without CBLAS

2006-01-22  Adam Piatyszek  <ediap@users.sourceforge.net>

	* itpp/base/converters.h: Removed strange `#if 0 ... #endif'
	statements

	* Makefile.am: Added itpp_msvc2003.* files to EXTRA_DIST variable

	* INSTALL, doc/local/installation.doc: Updated to reflect recent
	changes in configuration script
	* configure.ac, itpp/itconfig.h, itpp/base/itassert.cpp,