@@ -31,8 +31,8 @@
 <a href="http://cvs.sourceforge.net/viewcvs.py/itpp/itpp/NEWS?view=markup">NEWS</a><br>
 <a href="http://cvs.sourceforge.net/viewcvs.py/itpp/itpp/ChangeLog?view=markup">ChangeLog</a><br>
 <br>
-<b>Previous Versions:</b><br>
-<b><a href="http://itpp.sourceforge.net/3.9.0/">3.9.0</a></b><br>
+<b>Previous Stable Releases:</b><br>
+<b><a href="http://itpp.sourceforge.net/3.8.1/">3.9.1</a></b><br>
 <b><a href="http://itpp.sourceforge.net/3.8.1/">3.8.1</a></b><br>
 
 </small>
