@@ -10,5 +10,5 @@
 <body>
 <div style="width: 100%; height: 40px; background-color: #ffff00; border: 1px solid #b0b0b0; text-align: right; margin: 2px; padding: 2px;">
   <img src="./itpp_logga.jpg" align="left" alt="" width="100" height="40"> 
-  <p style="margin-right: 10px; font-weight: bold; font-size: 9pt;">Latest version: $projectnumber</p>
+  <p style="margin-right: 10px; font-weight: bold; font-size: 9pt;">Latest Stable Release: $projectnumber</p>
 </div>
